# azure-document-converter

./: README.md  output-markdown.md  output-prebuilt-documentSearch-with-figure.json  pyproject.toml  run_azure_content_understanding.py  run_azure_content_understanding_sdk_figures.py  run_azure_content_understanding_via_sdk.py  run_azure_document_intelligence.py  sample_analyze_binary.py  sample_create_analyzer.py  sample_get_analyzer.py
data/output/content-understanding/: output-markdown-documentSearch-with-figure.md  output-markdown-gasunie.md  output-my_custom_analyzer_1773144144-with-figure-sdk-old.json  output-my_custom_analyzer_1773144144-with-figure.json  output-my_custom_analyzer_markdown_with_figure_sdk.md  output-prebuilt-documentSearch-with-figure.json  output-prebuilt-documentSearch.json  output-prebuilt-documentSearch.md  output-v3.md  output-v4.md
data/output/document-intelligence/: output-raw.githubusercontent.com.json
